--- a/build.gradle
+++ b/build.gradle
@@ -29,18 +29,21 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 ext {
+
     serenity_version = '4.2.1'
     junit_platform_launcher_version="1.11.0"
     cucumber_junit_platform_engine_version="7.16.1"
     junit_platform_suite_version="1.11.0"
     junit_jupiter_engine_version="5.11.0"
     junit_vintage_engine_version="5.11.0"
-    logback_classic_version="1.2.10"
+    logback_classic_version="1.4.11"
+    slf4j_version = "2.0.7"
     assertj_core_version="3.23.1"
+
 }
 
 dependencies {
-    dependencies {
+        implementation 'org.slf4j:slf4j-api:2.0.7'
         testImplementation "net.serenity-bdd:serenity-core:${serenity_version}"
         testImplementation "net.serenity-bdd:serenity-cucumber:${serenity_version}"
         testImplementation "net.serenity-bdd:serenity-screenplay:${serenity_version}"
@@ -53,8 +56,8 @@ dependencies {
         testImplementation "org.junit.jupiter:junit-jupiter-engine:${junit_jupiter_engine_version}"
         testImplementation "org.junit.vintage:junit-vintage-engine:${junit_vintage_engine_version}"
         implementation "ch.qos.logback:logback-classic:${logback_classic_version}"
+        implementation "org.slf4j:slf4j-api:${slf4j_version}"
         testImplementation "org.assertj:assertj-core:${assertj_core_version}"
-    }
 }
 
 test {
